<resources>
    <string name="app_name">Photo Shot List</string>
    <string name="button_add_category">Random Category</string>
    <string name="button_all_categories">All Categories</string>
    <string name="button_add_composition">Random Composition</string>
    <string name="button_all_compositions">All Compositions</string>
    <string name="button_new_shotlist">Shot Lists</string>
    <string name="hint_edittext_shotlist_name">Shot List Name</string>
    <string name="hint_edittext_shotlist_description">Shot List Description</string>
    <string name="button_create_shotlist">Create Shot List</string>
    <string name="button_begin">Start</string>
    <string name="edit_text_category_name">Add the Category Name.</string>
    <string name="edit_text_composition_name">Add the Composition Name.</string>
    <string name="cardview_category_text">Place the subject (this will be blacked out) in front of some source of light and force your camera to set its exposure based upon the brightest part of your picture (the background) and not the subject of your image.</string>
    <string name="textview_category_description">test</string>
    <string name="could_not_retrieve_challengeme_item">Could not retrieve a Challenge Me item.</string>
    <string name="done_copying">Done copying.</string>
    <string name="cannot_write_to_sdcard">Cannot write to SD card.</string>
    <string name="invalid_db_path">Current DB %s does not exist.</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_shotlists">Shot Lists</string>
    <string name="nav_item_categories">Categories</string>
    <string name="nav_item_compositions">Compositions</string>
    <string name="nav_item_challengeme">Challenge Me</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_shotlists</item>
        <item>@string/nav_item_categories</item>
        <item>@string/nav_item_compositions</item>
        <item>@string/nav_item_challengeme</item>
    </string-array>

    <string name="title_shotlists">Shot Lists</string>
    <string name="title_categories">Categories</string>
    <string name="title_compositions">Compositions</string>
    <string name="title_home">Home</string>
    <string name="title_challengeme">Challenge Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_edit_categories">Edit fragment_categories.xml to change the appearance</string>
    <string name="fragment_edit_challengeme">Edit fragment_challengeme.xml to change the appearance</string>
    <string name="fragment_edit_compositions">Edit fragment_compositions.xml to change the appearance</string>
    <string name="fragment_edit_home">Edit fragment_home.xml to change the appearance</string>
    <string name="fragment_edit_shotlist">Edit fragment_shotlist.xml to change the appearance</string>

    <string-array name="options">
        <item>Drinks</item>
        <item>Food</item>
        <item>Stores</item>
    </string-array>

    <!-- Card View Start -->
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <!-- Card View End -->

    <!-- Test strings Start-->
    <string name="cardslib">Cardslib</string>
    <string name="add_text_here">Add Text Here</string>
    <!-- Test strings End-->
</resources>
