<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.photoshotlist.NewShotListActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextShotListName"
        android:enabled="true"
        android:inputType="text"
        android:hint="@string/hint_edittext_shotlist_name"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/buttonCreateShotList"
        android:layout_alignStart="@+id/buttonCreateShotList" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCreateShotList"
        android:text="@string/button_create_shotlist"
        android:onClick="onClickNewShotlist"
        android:layout_below="@+id/editTextShotListDescription"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewErrorMessage"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextShotListDescription"
        android:enabled="true"
        android:inputType="text"
        android:hint="@string/hint_edittext_shotlist_description"
        android:layout_below="@+id/editTextShotListName"
        android:layout_alignLeft="@+id/editTextShotListName"
        android:layout_alignStart="@+id/editTextShotListName" />
</RelativeLayout>
